staging/src/k8s.io/apiserver/pkg/admission/testing/celtest/testdata/mutating-admission-policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingAdmissionPolicy
spec:
  matchConditions:
    - name: only-pods
      expression: "object.kind == 'Pod'"
  mutations:
    - patchType: ApplyConfiguration
      applyConfiguration:
        expression: "Object{metadata: Object.metadata{labels: {'mutated': 'true'}}}"
