staging/src/k8s.io/apiserver/pkg/admission/testing/celtest/testdata/validating-admission-policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
spec:
  paramKind:
    apiVersion: v1
    kind: ConfigMap
  matchConditions:
    - name: enabled
      expression: "params.data.enabled == 'true'"
  validations:
    - expression: "true"
  auditAnnotations:
    - key: pod-name
      valueExpression: "string(object.metadata.name)"
