staging/src/k8s.io/apiserver/pkg/admission/testing/celtest/testdata/validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
webhooks:
  - name: validate.example.com
    matchConditions:
      - name: only-pods
        expression: "request.resource.resource == 'pods'"
